# VirtualMachines-2025

HW1/: CMakeLists.txt  main.cpp
HW2/: CMakeLists.txt  README.md  main.c  performance.sh  run_tests.py
HW2/regression/: run_regression.sh
HW2/runtime/: CMakeLists.txt  debug.h  gc.c  gc.h  runtime.c  runtime.h
HW_2/: CMakeLists.txt  machine_state.h  main.cpp  operation.cpp  operation.h
